; ModuleID = '/home/carl/AnghaBench/git/extr_apply.c_prefix_one.c'
source_filename = "/home/carl/AnghaBench/git/extr_apply.c_prefix_one.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.apply_state = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.apply_state*, i8**)* @prefix_one to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @prefix_one(%struct.apply_state* %0, i8** %1) #0 {
  %3 = alloca %struct.apply_state*, align 8
  %4 = alloca i8**, align 8
  %5 = alloca i8*, align 8
  store %struct.apply_state* %0, %struct.apply_state** %3, align 8
  store i8** %1, i8*** %4, align 8
  %6 = load i8**, i8*** %4, align 8
  %7 = load i8*, i8** %6, align 8
  store i8* %7, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  br label %21

11:                                               ; preds = %2
  %12 = load %struct.apply_state*, %struct.apply_state** %3, align 8
  %13 = getelementptr inbounds %struct.apply_state, %struct.apply_state* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i8**, i8*** %4, align 8
  %16 = load i8*, i8** %15, align 8
  %17 = call i8* @prefix_filename(i32 %14, i8* %16)
  %18 = load i8**, i8*** %4, align 8
  store i8* %17, i8** %18, align 8
  %19 = load i8*, i8** %5, align 8
  %20 = call i32 @free(i8* %19)
  br label %21

21:                                               ; preds = %11, %10
  ret void
}

declare dso_local i8* @prefix_filename(i32, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
